--- a/1/知识点.html
+++ b/1/知识点.html
@@ -2,4 +2,7 @@
 inline ：行内元素(不能设置宽高)
 inline-block: 行内块元素
 
-2.position: absolute不能用margin:auto来居中
+2.position: absolute不能用margin:auto来居中,设置top
+什么的没用
+
+3. p标签默认margin: 16px;
