--- a/1/知识点.html
+++ b/1/知识点.html
@@ -25,3 +25,9 @@ inline-block: 行内块元素
 == 
 .parent-rule :hover
 
+5.<div class="parent parent--active"></div>
+
+.parent  组件本体
+.parent--active 组件状态
+ parent--active不能脱离parent单独存在
+ 
